chore(dep): add keyword

--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
   "categories": [
     "Themes"
   ],
+  "keywords": [
+    "theme",
+    "dark theme",
+    "light theme",
+    "dullahan",
+    "dark dullahan",
+    "white dullahan"
+  ],
   "contributes": {
     "themes": [
       {
