--- a/package.json
+++ b/package.json
@@ -1,25 +1,12 @@
 {
   "name": "dullahan-vscode-theme",
-  "displayName": "Dullahan",
-  "description": "A Dullahan theme for VS Code",
-  "version": "1.0.0",
-  "license": "MIT",
-  "scripts": {
-    "package": "vsce package"
-  },
-  "engines": {
-    "vscode": "^1.83.0"
+  "version": "1.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PunGrumpy/dullahan-vscode-theme"
   },
   "categories": [
     "Themes"
-  ],
-  "keywords": [
-    "theme",
-    "dark theme",
-    "light theme",
-    "dullahan",
-    "dark dullahan",
-    "white dullahan"
   ],
   "contributes": {
     "themes": [
@@ -35,12 +22,28 @@
       }
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/PunGrumpy/dullahan-vscode-theme"
+  "description": "A Dullahan theme for VS Code",
+  "displayName": "Dullahan",
+  "engines": {
+    "vscode": "^1.83.0"
+  },
+  "keywords": [
+    "theme",
+    "dark theme",
+    "light theme",
+    "dullahan",
+    "dark dullahan",
+    "white dullahan"
+  ],
+  "icon": "assets/dullahan.gif",
+  "license": "MIT",
+  "publisher": "PunGrumpy",
+  "scripts": {
+    "login": "vsce login",
+    "package": "vsce package",
+    "publish": "vsce publish"
   },
   "devDependencies": {
-    "ovsx": "^0.8.3",
     "vsce": "^2.15.0"
   }
 }
