--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dullahan-vscode-theme",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/PunGrumpy/dullahan-vscode-theme"
@@ -35,7 +35,7 @@
     "dark dullahan",
     "white dullahan"
   ],
-  "icon": "assets/dullahan.gif",
+  "icon": "assets/dullahan-logo.gif",
   "license": "MIT",
   "publisher": "PunGrumpy",
   "scripts": {
