--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
-node_modules
+# Node.js dependencies
+node_modules/
+
+# Generated files
 *.vsix
+dist/
+
+# Generated theme files
+themes/*.json
+
+# TypeScript-specific
+*.tsbuildinfo
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor-specific files
+.vscode/*
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/tasks.json
