--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "description": "A Dullahan theme for VS Code",
   "displayName": "Dullahan",
   "engines": {
-    "vscode": "^1.83.0"
+    "node": "^23.0.0",
+    "vscode": "^1.1.37"
   },
   "keywords": [
     "theme",
@@ -45,11 +46,28 @@
   "license": "MIT",
   "publisher": "PunGrumpy",
   "scripts": {
-    "login": "vsce login",
-    "package": "vsce package",
-    "publish": "vsce publish"
+    "build:ts": "tsc",
+    "build:themes": "node dist/index.js",
+    "build": "npm run build:ts && npm run build:themes",
+    "watch": "tsc -w",
+    "package": "npm run build && vsce package",
+    "publish": "npm run build && vsce publish",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "clean": "rimraf dist themes/*.json"
   },
   "devDependencies": {
-    "vsce": "^2.15.0"
+    "@moxer/vscode-theme-generator": "1.21.0",
+    "@types/fs-extra": "11.0.4",
+    "@types/rimraf": "4.0.5",
+    "@types/vscode": "^1.97.0",
+    "@typescript-eslint/eslint-plugin": "8.25.0",
+    "@typescript-eslint/parser": "8.25.0",
+    "eslint": "9.21.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "fs-extra": "11.3.0",
+    "rimraf": "6.0.1",
+    "typescript": "5.8.2",
+    "vscode": "1.1.37"
   }
 }
