--- a/package.json
+++ b/package.json
@@ -58,11 +58,13 @@
   },
   "devDependencies": {
     "@moxer/vscode-theme-generator": "1.21.0",
+    "@types/fs-extra": "11.0.4",
     "@types/rimraf": "4.0.5",
     "@typescript-eslint/eslint-plugin": "8.25.0",
     "@typescript-eslint/parser": "8.25.0",
     "eslint": "9.21.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "fs-extra": "11.3.0",
     "rimraf": "6.0.1",
     "typescript": "5.8.2"
   }
