--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/rimraf": "4.0.5",
     "@typescript-eslint/eslint-plugin": "8.25.0",
     "@typescript-eslint/parser": "8.25.0",
+    "@vscode/vsce": "^3.2.2",
     "eslint": "9.21.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "fs-extra": "11.3.0",
