--- a/package.json
+++ b/package.json
@@ -1,13 +1,37 @@
 {
   "name": "dullahan-vscode-theme",
+  "displayName": "Dullahan",
   "version": "1.2.4",
+  "description": "A Dullahan theme for VS Code",
+  "categories": [
+    "Themes"
+  ],
+  "keywords": [
+    "theme",
+    "dark theme",
+    "light theme",
+    "dullahan",
+    "dark dullahan",
+    "white dullahan"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/PunGrumpy/dullahan-vscode-theme"
   },
-  "categories": [
-    "Themes"
-  ],
+  "license": "MIT",
+  "publisher": "PunGrumpy",
+  "scripts": {
+    "build": "npm run build:ts && npm run build:themes",
+    "build:themes": "node dist/index.js",
+    "build:ts": "tsc",
+    "clean": "rimraf dist themes/*.json",
+    "format": "prettier --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "package": "npm run build && vsce package",
+    "publish": "npm run build && vsce publish",
+    "watch": "tsc -w"
+  },
   "contributes": {
     "themes": [
       {
@@ -27,35 +51,6 @@
       }
     ]
   },
-  "description": "A Dullahan theme for VS Code",
-  "displayName": "Dullahan",
-  "engines": {
-    "node": "^23.0.0",
-    "vscode": "^1.1.37"
-  },
-  "keywords": [
-    "theme",
-    "dark theme",
-    "light theme",
-    "dullahan",
-    "dark dullahan",
-    "white dullahan"
-  ],
-  "pricing": "Free",
-  "icon": "assets/dullahan-logo.gif",
-  "license": "MIT",
-  "publisher": "PunGrumpy",
-  "scripts": {
-    "build:ts": "tsc",
-    "build:themes": "node dist/index.js",
-    "build": "npm run build:ts && npm run build:themes",
-    "watch": "tsc -w",
-    "package": "npm run build && vsce package",
-    "publish": "npm run build && vsce publish",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "clean": "rimraf dist themes/*.json"
-  },
   "devDependencies": {
     "@moxer/vscode-theme-generator": "1.21.0",
     "@types/fs-extra": "11.0.4",
@@ -66,7 +61,15 @@
     "eslint": "9.21.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "fs-extra": "11.3.0",
+    "prettier": "^3.5.2",
+    "prettier-plugin-packagejson": "^2.5.9",
     "rimraf": "6.0.1",
     "typescript": "5.8.2"
-  }
+  },
+  "engines": {
+    "node": "^23.0.0",
+    "vscode": "^1.1.37"
+  },
+  "icon": "assets/dullahan-logo.gif",
+  "pricing": "Free"
 }
